Homework 5.1. Feedback follow up